# use_cmake

./: README.md
course_01/: CMakeLists.txt  README.md  main.cpp
course_02/: CMakeLists.txt  README.md
course_03/: README.md
course_04/: CMakeLists.txt  README.md
course_04/src/: add.cpp  main.cpp  sub.cpp
course_05/: CMakeLists.txt  README.md
course_06/: CMakeLists.txt
course_06/test/: main.cpp
course_07/: README.md
course_07/make_lib/: CMakeLists.txt  README.md
course_07/make_lib/cmake/: mathConfig.cmake.in  my_mathConfig.cmake.in
course_07/make_lib/include/: math.hpp
course_07/make_lib/src/: add.cpp  sub.cpp
course_07/make_lib/test/: main.cpp
course_07/use_lib/: CMakeLists.txt  main.cpp
